[Upd] strategy -> Identity,  TodoService method update